Fix Scrollbar comes

--- a/style.css
+++ b/style.css
@@ -6,13 +6,12 @@
   box-sizing: border-box;
 }
 
-body {
-  height: 100vh;
-  margin: 0px;
-  font-family: "Montserrat";
-  font-size: 14px;
+html, body {
+  height: 100%;
+  margin: 0;
 }
 
-h1 {
-  margin: 0px;
+body {
+  font-family: "Montserrat";
+  font-size: 14px;
 }
